--- a/style.css
+++ b/style.css
@@ -2,3 +2,26 @@ footer {
     display: block;
     background-color: #f1f1f1; 
 }
+ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        background-color: #f1f1f1;
+      }
+
+      ul li {
+        display: inline-block;
+      }
+
+      li a {
+        display: block;
+        color: #000;
+        padding: 8px 16px;
+        text-decoration: none;
+      }
+
+      /* Change the link color on hover */
+      li a:hover {
+        background-color: #555;
+        color: white;
+      }
