--- a/style.css
+++ b/style.css
@@ -42,3 +42,13 @@ code {
 #center {
     text-align: center;
 }
+
+button {
+	padding:5px 15px; 
+	background: #A9A9A9; 
+	border:0 none;
+	cursor:pointer;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	color: #fff;
+}
