--- a/style.css
+++ b/style.css
@@ -52,3 +52,14 @@ button {
 	border-radius: 5px;
 	color: #fff;
 }
+
+#outer
+{
+    width:100%;
+    text-align: center;
+}
+
+.inner
+{
+    display: inline-block;
+}
